<resources>
    <string name="app_name">Task_2</string>

    <!--  ===== Activities =====  -->

    <!--  Activity 1  -->
    <string name="activity1TextViewNameLabel">Name</string>
    <string name="activity1ButtonSubmittLabel">Submit</string>
    <!--  Activity 2  -->
    <string name="title_activity_main2">Activity2</string>
    <string name="activity2NameDescLabel">Name:</string>
    <string name="activity2PostCodeDescLabel">Post code:</string>

    <!--  Activity 3  -->
    <string name="title_activity_main3">MainActivity3</string>
    <string name="activity3RateDescLabel">Name:</string>

    <!--  Activity 4  -->
    <string name="title_activity_main4">MainActivity4</string>
    <string name="activity4NameDescLabel">Name:</string>

    <!--  Activity 5  -->
    <string name="title_activity_main5">MainActivity5</string>
    <string name="activity5UserNameDescLabel">Name:</string>
    <string name="activity5CityNameDescLabel">City:</string>
    <string name="activity5PostCodeDescLabel">Post code:</string>
    <string name="activity5RatingNameDescLabel">Rating:</string>

    <string name="activity5Activity1Name">Activity 1</string>
    <string name="activity5Activity2Name">Activity 2</string>
    <string name="activity5Activity3Name">Activity 3</string>
    <string name="activity5Activity4Name">Activity 4</string>
    <string name="activity5Activity5Name">Activity 5</string>


    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>